  (Ilia, Stefan)
- Fixed possible register_globals toggle via parse_str(). (Ilia, Stefan)
- Fixed a bug where stream_get_meta_data() did not return the "uri" element for
  files opened with tmpname(). (Derick)
- Fixed "make test" to work for phpized extensions. (Hartmut, Jani)
- Fixed failing queries (FALSE returned) with mysqli_query() on 64 bit systems.
  (Andrey)
- Fixed bug #34855 (ibase_service_attach() segfault on AMD64). 
  (irie at gmx dot de, Tony)
- Fixed bug #34850 (--program-suffix and --program-prefix not included in
  man page names). (Jani)
- Fixed bug #34818 (several functions crash when invalid mysqli_link object 
  is passed). (Tony)
- Fixed bug #34810 (mysqli::init() and others use wrong $this pointer
  without checks). (Tony)
- Fixed bug #34809 (FETCH_INTO in PDO crashes without a destination object).
  (Ilia)
- Fixed bug #34802 (Fixed crash on object instantiation failure). (Ilia)
- Fixed bug #34796 (missing SSL linking in ext/ftp when configured as shared).
  (Jani)
- Fixed bug #34790 (preg_match_all(), named capturing groups, variable
  assignment/return => crash). (Dmitry)
- Fixed bug #34788 (SOAP Client not applying correct namespace to generated
  values). (Dmitry)
- Fixed bug #34787 (SOAP Client not handling boolean types correctly). (Dmitry)
- Fixed bug #34786 (2 @ results in change to error_reporting() to random value)
  (Dmitry, Tony)
- Fixed bug #34785 (subclassing of mysqli_stmt does not work). (Georg)
- Fixed bug #34777 (Crash in dblib when fetching non-existent error info). (Ilia)
- Fixed bug #34771 (strtotime() fails with 1-12am/pm). (Derick)
- Fixed bug #34758 (PDO_DBLIB did not implement rowCount()). (Ilia)
- Fixed bug #34757 (iconv_substr() gives "Unknown error" when offset > string 
  length). (Tony)
- Fixed bug #34742 (ftp wrapper failures caused from segmented command 
  transfer). (Ilia)
- Fixed bug #34723 (array_count_values() strips leading zeroes). (Tony)